--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
